[tool.poetry]
name = "nomine"
version = "0.1.0"
description = "Nomine"
license = "MIT"
authors = ["Guido Rainuzzo <hi@guido.nyc>"]
readme = "README.md"
homepage = "https://github.com/gzzo/nomine"
repository = "https://github.com/gzzo/nomine"

[tool.poetry.dependencies]
python = ">=3.6.0,<4"
ariadne = "^0.11.0"
uvicorn = "^0.11.5"
ujson = "^3.0.0"
sqlalchemy = "^1.3.17"
fastapi = "^0.55.1"
graphql-sqlalchemy = { path = "../../../graphql-sqlalchemy" }
tmdbsimple = "^2.2.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
